--- a/project-dataapi/src/main/webapp/analyse/index.html
+++ b/project-dataapi/src/main/webapp/analyse/index.html
@@ -8,15 +8,15 @@
 
         <title>数据分析展示界面</title>
 
-        <script type="text/javascript" src="./resources/js/contants.js"></script>
+        <script type="text/javascript" src="analyse/resources/js/contants.js"></script>
 
-        <link href="./resources/css/bootstrap.min.css" rel="stylesheet">
-        <link href="./resources/css/font-awesome.min.css" rel="stylesheet">
-        <link href="./resources/css/style.min.css" rel="stylesheet">
-        <link href="./resources/css/dateRange.css" rel="stylesheet">
-        <link rel="stylesheet" href="./resources/css/layer.css" id="layui_layer_skinlayercss" style="">
-        <link rel="stylesheet" href="./resources/css/layer.ext.css" id="layui_layer_skinlayercss" style="">
-        <link rel="stylesheet" href="./resources/css/style.css" id="layui_layer_skinlayercss" style="">
+        <link href="analyse/resources/css/bootstrap.min.css" rel="stylesheet">
+        <link href="analyse/resources/css/font-awesome.min.css" rel="stylesheet">
+        <link href="analyse/resources/css/style.min.css" rel="stylesheet">
+        <link href="analyse/resources/css/dateRange.css" rel="stylesheet">
+        <link rel="stylesheet" href="analyse/resources/css/layer.css" id="layui_layer_skinlayercss" style="">
+        <link rel="stylesheet" href="analyse/resources/css/layer.ext.css" id="layui_layer_skinlayercss" style="">
+        <link rel="stylesheet" href="analyse/resources/css/style.css" id="layui_layer_skinlayercss" style="">
         <style type="text/css">
             .fixed-nav .slimScrollDiv #side-menu {
                 padding-bottom: 60px;
@@ -45,13 +45,13 @@
                                 </a>
                                 <ul class="dropdown-menu animated fadeInRight m-t-xs">
                                     <li>
-                                        <a href="./login.html">安全退出</a>
+                                        <a href="analyse/login.html">安全退出</a>
                                     </li>
                                 </ul>
                             </div>
                         </li>
                         <li class="active">
-                            <a class="J_menuItem" href="pages/first_page.html" data-index="0">
+                            <a class="J_menuItem" href="analyse/pages/first_page.html" data-index="0">
                                 <i class="fa fa-home"></i>
                                 <span class="nav-label">首页</span>
                             </a>
@@ -64,16 +64,16 @@
                             </a>
                             <ul class="nav nav-second-level collapse" aria-expanded="true" style="">
                                 <li>
-                                    <a class="J_menuItem" href="./pages/test1.html" data-index="1">测试1</a>
+                                    <a class="J_menuItem" href="analyse/pages/test1.html" data-index="1">测试1</a>
                                 </li>
                                 <li>
-                                    <a class="J_menuItem" href="./pages/test2.html" data-index="2">测试2</a>
+                                    <a class="J_menuItem" href="analyse/pages/test2.html" data-index="2">测试2</a>
                                 </li>
                                 <li>
-                                    <a class="J_menuItem" href="./pages/test3.html" data-index="3">测试3</a>
+                                    <a class="J_menuItem" href="analyse/pages/test3.html" data-index="3">测试3</a>
                                 </li>
                                 <li>
-                                    <a class="J_menuItem" href="./pages/test4.html" data-index="3">测试4</a>
+                                    <a class="J_menuItem" href="analyse/pages/test4.html" data-index="3">测试4</a>
                                 </li>
                             </ul>
                         </li>
@@ -90,7 +90,7 @@
                 <button class="roll-nav roll-left J_tabLeft"><i class="fa fa-backward"></i></button>
                 <nav class="page-tabs J_menuTabs">
                     <div class="page-tabs-content" style="margin-left: 0px; ">
-                        <a href="javascript:;" class="J_menuTab active" data-id="pages/first_page.html">首页<i class="fa fa-times-circle"></i></a>
+                        <a href="javascript:;" class="J_menuTab active" data-id="analyse/pages/first_page.html">首页<i class="fa fa-times-circle"></i></a>
                     </div>
                 </nav>
                 <button class="roll-nav roll-right J_tabRight"><i class="fa fa-forward"></i></button>
@@ -103,7 +103,7 @@
                 <a href="./login.html" class="roll-nav roll-right J_tabExit"><i class="fa fa fa-sign-out"></i> 退出</a>
             </div>
             <div class="row J_mainContent" id="content-main">
-                <iframe class="J_iframe" name="iframe0" width="100%" height="100%" src="pages/first_page.html" frameborder="0" data-id="pages/first_page.html" seamless=""></iframe>
+                <iframe class="J_iframe" name="iframe0" width="100%" height="100%" src="analyse/pages/first_page.html" frameborder="0" data-id="analyse/pages/first_page.html" seamless=""></iframe>
             </div>
             <div class="footer">
                 <div class="pull-left">© 北风网</div>
@@ -113,20 +113,20 @@
     </div>
 
     <!-- 全局js -->
-    
-    <script type="text/javascript" src="./resources/js/jquery-2.1.1.min.js"></script>
-    <script type="text/javascript" src="./resources/js/bootstrap.min.js"></script>
-    <script type="text/javascript" src="./resources/js/jquery.metisMenu.js"></script>
-    <script type="text/javascript" src="./resources/js/jquery.slimscroll.min.js"></script>
-    <script type="text/javascript" src="./resources/js/layer.js"></script>
-    <script type="text/javascript" src="./resources/js/dateRange.js"></script>
+
+    <script type="text/javascript" src="analyse/resources/js/jquery-2.1.1.min.js"></script>
+    <script type="text/javascript" src="analyse/resources/js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="analyse/resources/js/jquery.metisMenu.js"></script>
+    <script type="text/javascript" src="analyse/resources/js/jquery.slimscroll.min.js"></script>
+    <script type="text/javascript" src="analyse/resources/js/layer.js"></script>
+    <script type="text/javascript" src="analyse/resources/js/dateRange.js"></script>
 
     <!-- 自定义js -->
-    <script type="text/javascript" src="./resources/js/hplus.min.js"></script>
-    <script type="text/javascript" src="./resources/js/contabs.min.js"></script>
+    <script type="text/javascript" src="analyse/resources/js/hplus.min.js"></script>
+    <script type="text/javascript" src="analyse/resources/js/contabs.min.js"></script>
 
     <!-- 第三方插件 -->
 
-    <script type="text/javascript" src="./resources/js/pace.min.js"></script>
+    <script type="text/javascript" src="analyse/resources/js/pace.min.js"></script>
 
 </body></html>
