--- a/project-dataapi/src/main/webapp/analyse/pages/first_page.html
+++ b/project-dataapi/src/main/webapp/analyse/pages/first_page.html
@@ -7,13 +7,13 @@
 <meta name="renderer" content="webkit">
 <title>首页</title>
 
-<link href="../resources/css/bootstrap.min.css" rel="stylesheet">
-<link href="../resources/css/font-awesome.min.css" rel="stylesheet">
-<link href="../resources/css/style.min.css" rel="stylesheet">
-<link href="../resources/css/dateRange.css" rel="stylesheet">
-<link rel="stylesheet" href="../resources/css/layer.css" id="layui_layer_skinlayercss" style="">
-<link rel="stylesheet" href="../resources/css/layer.ext.css" id="layui_layer_skinlayercss" style="">
-<link rel="stylesheet" href="../resources/css/style.css" id="layui_layer_skinlayercss" style="">
+<link href="./resources/css/bootstrap.min.css" rel="stylesheet">
+<link href="./resources/css/font-awesome.min.css" rel="stylesheet">
+<link href="./resources/css/style.min.css" rel="stylesheet">
+<link href="./resources/css/dateRange.css" rel="stylesheet">
+<link rel="stylesheet" href="./resources/css/layer.css" id="layui_layer_skinlayercss" style="">
+<link rel="stylesheet" href="./resources/css/layer.ext.css" id="layui_layer_skinlayercss" style="">
+<link rel="stylesheet" href="./resources/css/style.css" id="layui_layer_skinlayercss" style="">
 </head>
 
 <body class="gray-bg">
