--- a/project-dataapi/src/main/webapp/analyse/pages/test1.html
+++ b/project-dataapi/src/main/webapp/analyse/pages/test1.html
@@ -7,21 +7,21 @@
 <meta name="renderer" content="webkit">
 <title>Hourly分析</title>
 
-<script type="text/javascript" src="./resources/js/contants.js"></script>
-<link href="./resources/css/bootstrap.min.css" rel="stylesheet">
-<link href="./resources/css/font-awesome.min.css" rel="stylesheet">
-<link href="./resources/css/style.min.css" rel="stylesheet">
-<link href="./resources/css/dateRange.css" rel="stylesheet">
-<link rel="stylesheet" href="./resources/css/layer.css" id="layui_layer_skinlayercss" style="">
-<link rel="stylesheet" href="./resources/css/layer.ext.css" id="layui_layer_skinlayercss" style="">
-<link rel="stylesheet" href="./resources/css/style.css" id="layui_layer_skinlayercss" style="">
-<script type="text/javascript" src="./resources/js/jquery-2.1.1.min.js"></script>
-    <script type="text/javascript" src="./resources/js/dateRange.js"></script>
+<script type="text/javascript" src="analyse/resources/js/contants.js"></script>
+<link href="analyse/resources/css/bootstrap.min.css" rel="stylesheet">
+<link href="analyse/resources/css/font-awesome.min.css" rel="stylesheet">
+<link href="analyse/resources/css/style.min.css" rel="stylesheet">
+<link href="analyse/resources/css/dateRange.css" rel="stylesheet">
+<link rel="stylesheet" href="analyse/resources/css/layer.css" id="layui_layer_skinlayercss" style="">
+<link rel="stylesheet" href="analyse/resources/css/layer.ext.css" id="layui_layer_skinlayercss" style="">
+<link rel="stylesheet" href="analyse/resources/css/style.css" id="layui_layer_skinlayercss" style="">
+<script type="text/javascript" src="js/jquery-2.1.1.min.js"></script>
+    <script type="text/javascript" src="js/dateRange.js"></script>
     <!-- highcharts js -->
-    <script type="text/javascript" src="./resources/js/highcharts.js"></script>
-    <script type="text/javascript" src="./resources/js/exporting.js"></script>
-    <script type="text/javascript" src="./resources/js/json2.js"></script>
-    <script type="text/javascript" src="./resources/js/common.js"></script>
+    <script type="text/javascript" src="js/highcharts.js"></script>
+    <script type="text/javascript" src="js/exporting.js"></script>
+    <script type="text/javascript" src="js/json2.js"></script>
+    <script type="text/javascript" src="js/common.js"></script>
 
 		<script type="text/javascript">
             $(function(){
