--- a/project-dataapi/src/main/webapp/analyse/pages/test4.html
+++ b/project-dataapi/src/main/webapp/analyse/pages/test4.html
@@ -7,24 +7,25 @@
 <meta name="renderer" content="webkit">
 <title>Hourly分析</title>
 
-<script type="text/javascript" src="analyse/resources/js/contants.js"></script>
-<link href="analyse/resources/css/bootstrap.min.css" rel="stylesheet">
-<link href="analyse/resources/css/font-awesome.min.css" rel="stylesheet">
-<link href="analyse/resources/css/style.min.css" rel="stylesheet">
-<link href="analyse/resources/css/dateRange.css" rel="stylesheet">
-<link rel="stylesheet" href="analyse/resources/css/layer.css" id="layui_layer_skinlayercss" style="">
-<link rel="stylesheet" href="analyse/resources/css/layer.ext.css" id="layui_layer_skinlayercss" style="">
-<link rel="stylesheet" href="analyse/resources/css/style.css" id="layui_layer_skinlayercss" style="">
-    <script type="text/javascript" src="js/jquery-2.1.1.min.js"></script>
-    <script type="text/javascript" src="js/dateRange.js"></script>
-    <!-- highcharts js -->
-    <!-- <script type="text/javascript" src="resources/highcharts.js"></script> -->
-    <script type="text/javascript" src="js/highmaps.src.js"></script>
-    <script type="text/javascript" src="js/exporting.js"></script>
-    <script type="text/javascript" src="js/json2.js"></script>
-    <script type="text/javascript" src="js/common.js"></script>
-    <script type="text/javascript" src="js/cn-all.js"></script>
-    <script type="text/javascript" src="js/provinceConvert.js"></script>
+
+<link href="/analyse/resources/css/bootstrap.min.css" rel="stylesheet">
+<link href="/analyse/resources/css/font-awesome.min.css" rel="stylesheet">
+<link href="/analyse/resources/css/style.min.css" rel="stylesheet">
+<link href="/analyse/resources/css/dateRange.css" rel="stylesheet">
+<link rel="stylesheet" href="/analyse/resources/css/layer.css" id="layui_layer_skinlayercss" style="">
+<link rel="stylesheet" href="/analyse/resources/css/layer.ext.css" id="layui_layer_skinlayercss" style="">
+<link rel="stylesheet" href="/analyse/resources/css/style.css" id="layui_layer_skinlayercss" style="">
+    <script type="text/javascript" src="/analyse/resources/js/contants.js"></script>
+    <script type="text/javascript" src="/analyse/resources/js/jquery-2.1.1.min.js"></script>
+    <script type="text/javascript" src="/analyse/resources/js/dateRange.js"></script>
+    <!-- highcharts /js -->
+    <script type="text/javascript" src="/analyse/resources/js/highcharts.js"></script>
+    <script type="text/javascript" src="/analyse/resources/js/highmaps.src.js"></script>
+    <script type="text/javascript" src="/analyse/resources/js/exporting.js"></script>
+    <script type="text/javascript" src="/analyse/resources/js/json2.js"></script>
+    <script type="text/javascript" src="/analyse/resources/js/common.js"></script>
+    <script type="text/javascript" src="/analyse/resources/js/cn-all.js"></script>
+    <script type="text/javascript" src="/analyse/resources/js/provinceConvert.js"></script>
 		<script type="text/javascript">
             String.prototype.startWith=function(str){
                 if(str==null||str==""||this.length==0||str.length>this.length)
@@ -51,7 +52,7 @@
                 "广东": ["广东省", "cn-gd"],
                 "广西": ["广西省", "cn-gx"],
                 "新疆": ["新疆维吾尔自治区", "cn-xj"],
-                "江苏": ["江苏省", "cn-js"],
+                "江苏": ["江苏省", "cn-/js"],
                 "江西": ["江西省", "cn-jx"],
                 "河北": ["河北省", "cn-hb"],
                 "河南": ["河南省", "cn-he"],
