--- a/project-dataapi/src/main/webapp/analyse/pages/login.html
+++ b/project-dataapi/src/main/webapp/analyse/pages/login.html
@@ -6,6 +6,6 @@
 </head>
 <body>
     <h1>欢迎您进入数据分析平台，请自行实现用户管理(登录/添加用户等操作)</h1>
-    <h2>进入分析页面请点击: <a href="index.html">数据分析平台</a></h2>
+    <h2>进入分析页面请点击: <a href="../index.html">数据分析平台</a></h2>
 </body>
 </html>
