--- a/project-dataapi/src/main/webapp/analyse/index.html
+++ b/project-dataapi/src/main/webapp/analyse/index.html
@@ -39,7 +39,7 @@
                             <span><img alt="image" class="img-circle" src="/analyse/resources/pic/logo.jpg"></span>
                             <a data-toggle="dropdown" class="dropdown-toggle" href="#" aria-expanded="false">
                                     <span class="clear">
-                                   <span class="block m-t-xs"><strong class="font-bold">Beifeng-admin</strong></span>
+                                   <span class="block m-t-xs"><strong class="font-bold">admin</strong></span>
                                     <span class="text-muted text-xs block">超级管理员<b class="caret"></b></span>
                                     </span>
                             </a>
